# Process this file with automake to create Makefile.in

XSLTPROC = @XSLTPROC@
HTMLFILES = opensc.html opensc.css opensc-es.html
XMLFILES = opensc.xml opensc.xsl opensc-es.xml
STYLESHEET = opensc.xsl

MAINTAINERCLEANFILES = Makefile.in 

EXTRA_DIST = pkcs-15v1_1.asn $(XMLFILES) $(HTMLFILES) $(STYLESHEET) doxygen.conf generate.sh

