# Process this file with automake to create Makefile.in

XSLTPROC = @XSLTPROC@
SOURCE = opensc.xml opensc.xsl opensc-es.xml opensc.css opensc.xsl
GENERATE = opensc.html opensc-es.html

MAINTAINERCLEANFILES = Makefile.in $(GENERATE)

EXTRA_DIST = pkcs-15v1_1.asn $(SOURCE) $(GENERATE) doxygen.conf generate.sh

